# IAthon

./: .env.example  CLAUDE.md  DESIGN.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: __init__.py  audio.py  client.py  confidence.py  config.py  extractor.py  facture.py  fec_writer.py  helpers.py  marketing.py  models.py  pdf_reader.py  rh.py  storage.py
data/: app.db
data/samples/: README.md
prompts/: invoice_extraction.fr.md
scripts/: generate_invoices.py  utils.py
tests/: conftest.py  test_app_smoke.py  test_confidence.py  test_demo_data.py  test_extractor.py  test_fec_writer.py  test_models.py  test_pdf_reader.py  test_storage.py
tests/fixtures/: sample_invoice.json
ui/: __init__.py  accueil_view.py  audio_view.py  client_view.py  config_view.py  export.py  facture_view.py  marketing_view.py  review.py  rh_view.py  upload.py
