[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.6",
    "mistralai>=2.4.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic>=2",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.0",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
